init the database

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -5,17 +5,11 @@
 
 {% block body %}
 	<div class="root">
-		<h1>Hello
-			{{ controller_name }}! ✅</h1>
 
-		This friendly message is coming from:
+		<h1>Dashboard</h1>
 		<ul>
-			<li>Your controller at
-				<code>C:/Users/rayan/Documents/BUT MMI/SAE/SAE S3/sae_projet_aquarium/src/Controller/DashBoardController.php</code>
-			</li>
-			<li>Your template at
-				<code>C:/Users/rayan/Documents/BUT MMI/SAE/SAE S3/sae_projet_aquarium/templates/dashboard/index.html.twig</code>
-			</li>
+			{% for user in users %}
+				<li>{{ user.email }}</li>
+			{% endfor %}
 		</ul>
-	</div>
-{% endblock %}
+	{% endblock %}
