--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8">
-		<title>
-			{% block title %}AquaTrack
-			{% endblock %}
-		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🐠</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-		{% block stylesheets %}
-			<link rel="stylesheet" href="{{ asset('styles/global.css') }}">
-			<link rel="stylesheet" href="{{ asset(css_file_path) }}">
-		{% endblock %}
+    <head>
+        <meta charset="UTF-8">
+        <title>
+            {% block title %}AquaTrack
+            {% endblock %}
+        </title>
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🐠</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('styles/global.css') }}">
+            <link rel="stylesheet" href="{{ asset(css_file_path ?? 'styles/global.css') }}">
+        {% endblock %}
 
-		{% block javascripts %}
-			{% block importmap %}
-				{{ importmap('app') }}
-			{% endblock %}
-			<script>
-				/* When the user clicks on the button, 
+        {% block javascripts %}
+            {% block importmap %}
+                {{ importmap('app') }}
+            {% endblock %}
+            <script>
+                /* When the user clicks on the button,
 toggle between hiding and showing the dropdown content */
 function myFunction() {
 document.getElementById("myDropdown").classList.toggle("show");
@@ -36,47 +36,47 @@ openDropdown.classList.remove('show');
 }
 }
 }
-			</script>
-		{% endblock %}
-	</head>
-	<body>
-		<header>
-			<nav>
-				<ul>
-					<li>
-						<a id="logo" href="/">
-							{{ '<°)))><' }}
-							AquaTrack
-						</a>
-					</li>
-					<li id="profile">
-						<img src="{{asset('images/profile.jpg')}}" alt="user profile icon">
-						<div class="dropdown">
-							<button onclick="myFunction()" class="dropbtn">v</button>
-							<div id="myDropdown" class="dropdown-content">
-								<div class="dropdown">
-									<a href="/profile">Modifier le profile</a>
-									<a href="/logout">Déconnexion</a>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</nav>
-		</header>
-		<main>
-			<aside id="sidebar">
-				<ul>
-					<li><a href="/">Tableau de bord</a></li>
-					<li><a href="/data">Saisie de données</a></li>
-					<li><a href="/aquariums">Mes Aquariums</a></li>
-					<li><a href="/reports">Rapports et Analyses</a></li>
-					<li><a href="/ressources">Centre de Ressources</a></li>
-					<li><a href="/settings">Paramètres</a></li>
-				</ul>
-			</aside>
-			<section id="content"> {% block body %}{% endblock %}
-				</section>
-			</main>
-		</body>
-	</html>
+            </script>
+        {% endblock %}
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a id="logo" href="/">
+                            {{ '<°)))><' }}
+                            AquaTrack
+                        </a>
+                    </li>
+                    <li id="profile">
+                        <img src="{{ asset('images/profile.jpg') }}" alt="user profile icon">
+                        <div class="dropdown">
+                            <button onclick="myFunction()" class="dropbtn">v</button>
+                            <div id="myDropdown" class="dropdown-content">
+                                <div class="dropdown">
+                                    <a href="/profile">Modifier le profile</a>
+                                    <a href="/logout">Déconnexion</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <aside id="sidebar">
+                <ul>
+                    <li><a href="/">Tableau de bord</a></li>
+                    <li><a href="/data">Saisie de données</a></li>
+                    <li><a href="/aquariums">Mes Aquariums</a></li>
+                    <li><a href="/reports">Rapports et Analyses</a></li>
+                    <li><a href="/ressources">Centre de Ressources</a></li>
+                    <li><a href="/settings">Paramètres</a></li>
+                </ul>
+            </aside>
+            <section id="content"> {% block body %}{% endblock %}
+                </section>
+            </main>
+        </body>
+    </html>
