--- a/assets/styles/dashboard.css
+++ b/assets/styles/dashboard.css
@@ -1,3 +1,19 @@
 .root {
     padding: 1rem 2rem;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+th {
+    background-color: #2c2b26;
+    color: white;
+}
