--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,15 +1,133 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}AquaTrack | Dashboard
+{% block title %}
+	{{ title }}
+{% endblock %}
+
+{% block stylesheets %}
+	{{ parent() }}
+	<link rel="stylesheet" href="{{ asset('styles/dashboard.css') }}">
 {% endblock %}
 
 {% block body %}
 	<div class="root">
-
 		<h1>Dashboard</h1>
-		<ul>
-			{% for user in users %}
-				<li>{{ user.email }}</li>
-			{% endfor %}
-		</ul>
-	{% endblock %}
+		<h2>Aquariums</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>Name</th>
+					<th>Capacity</th>
+					<th>Type</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for aquarium in aquariums %}
+					<tr>
+						<td>{{ aquarium.id }}</td>
+						<td>{{ aquarium.name }}</td>
+						<td>{{ aquarium.capacity }}</td>
+						<td>{{ aquarium.type }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<h2>Data</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>createdAt</th>
+					<th>Aquarium ID</th>
+					<th>Temp</th>
+					<th>Ph</th>
+					<th>KH</th>
+					<th>GH</th>
+					<th>Cl2</th>
+					<th>No2</th>
+					<th>No3</th>
+					<th>Observation</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for data in datas %}
+					<tr>
+						<td>{{ data.id }}</td>
+						<td>{{ data.createdAt|date('Y-m-d H:i:s') }}</td>
+						<td>{{ data.aquarium.id }}</td>
+						<td>{{ data.temp }}</td>
+						<td>{{ data.ph }}</td>
+						<td>{{ data.kh }}</td>
+						<td>{{ data.gh }}</td>
+						<td>{{ data.cl2 }}</td>
+						<td>{{ data.no2 }}</td>
+						<td>{{ data.no3 }}</td>
+						<td>{{ data.observation }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<h2>Fishes</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>Name</th>
+					<th>Aquarium ID</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for fish in fishes %}
+					<tr>
+						<td>{{ fish.id }}</td>
+						<td>{{ fish.name }}</td>
+						<td>{{ fish.aquarium.id }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<h2>Settings</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>Settings</th>
+					<th>User ID</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for setting in settings %}
+					<tr>
+						<td>{{ setting.id }}</td>
+						<td>{{ setting.settings|json_encode|raw }}</td>
+						<td>{{ setting.user.id }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<h2>Users</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>Email</th>
+					<th>Password</th>
+					<th>Roles</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for user in users %}
+					<tr>
+						<td>{{ user.email }}</td>
+						<td>{{ user.password }}</td>
+						<td>
+							{% for role in user.roles %}
+								{{ role }}
+							{% endfor %}
+						</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
+{% endblock %}
