--- a/templates/data/_delete_form.html.twig
+++ b/templates/data/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_data_delete', {'id': data.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_data_delete', {'id': data.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette saisie ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ data.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn-danger">Supprimer</button>
 </form>
