--- a/templates/aquarium/edit.html.twig
+++ b/templates/aquarium/edit.html.twig
@@ -1,13 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Aquarium{% endblock %}
+{% block title %}Modifier Aquarium{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('styles/forms.css') }}">
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Aquarium</h1>
-
-    {{ include('aquarium/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_aquarium_index') }}">back to list</a>
-
-    {{ include('aquarium/_delete_form.html.twig') }}
+    <h1>Modifier Aquarium</h1>
+    {{ include('aquarium/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+    
+    <div style="margin-top: 2rem; text-align: right;">
+         {{ include('aquarium/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
