--- a/templates/data/edit.html.twig
+++ b/templates/data/edit.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier la Saisie
-{% endblock %}
+{% block title %}Modifier Mesure{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -9,12 +8,10 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="form-title">Modifier la saisie</h1>
-
-	{{ include('data/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
-
-	<div style="margin-top: 1rem; display: flex; justify-content: center; gap: 2rem; align-items: center;">
-        <a href="{{ path('app_data_index') }}" class="btn-link">Retour à la liste</a>
-        {{ include('data/_delete_form.html.twig') }}
+    <h1>Modifier Mesure</h1>
+    {{ include('data/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+    
+    <div style="margin-top: 2rem; text-align: right;">
+         {{ include('data/_delete_form.html.twig') }}
     </div>
 {% endblock %}
