--- a/templates/fish/show.html.twig
+++ b/templates/fish/show.html.twig
@@ -1,26 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Fish{% endblock %}
+{% block title %}Poisson : {{ fish.name }}{% endblock %}
 
 {% block body %}
-    <h1>Fish</h1>
+    <div class="d-flex justify-between align-center mb-4">
+        <h1>{{ fish.name }}</h1>
+        <div class="gap-2 d-flex">
+            <a href="{{ path('app_fish_edit', {'id': fish.id}) }}" class="btn btn-primary">Modifier</a>
+            <a href="{{ path('app_fish_index') }}" class="btn btn-secondary">Retour à la liste</a>
+        </div>
+    </div>
 
-    <table class="table">
-        <tbody>
+    <div class="card">
+        <h3>Informations</h3>
+        <table class="table-borderless">
             <tr>
-                <th>Id</th>
-                <td>{{ fish.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
+                <th style="width: 200px;">Nom</th>
                 <td>{{ fish.name }}</td>
             </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_fish_index') }}">back to list</a>
-
-    <a href="{{ path('app_fish_edit', {'id': fish.id}) }}">edit</a>
-
-    {{ include('fish/_delete_form.html.twig') }}
+            <tr>
+                <th>Aquarium</th>
+                <td>
+                    {% if fish.aquarium %}
+                        <a href="{{ path('app_aquarium_show', {'id': fish.aquarium.id}) }}">{{ fish.aquarium.name }}</a>
+                    {% else %}
+                        <span class="text-muted">Non assigné</span>
+                    {% endif %}
+                </td>
+            </tr>
+        </table>
+    </div>
 {% endblock %}
