feat(chart): added threshold-based line coloring (red/green) and dynamic Y-axis scaling

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -51,6 +51,7 @@
                         <div 
                             data-controller="chart" 
                             data-chart-color-value="#ffb74d"
+                            data-chart-thresholds-value='{"min": 24, "max": 28}'
                             data-chart-data-value='{{ tank_datas|map(d => {date: d.createdAt|date("Y-m-d H:i:s"), value: d.temp})|json_encode }}'
                         >
                             <div data-chart-target="container" style="width: 100%; height: 250px;"></div>
@@ -61,6 +62,7 @@
                         <div 
                             data-controller="chart" 
                             data-chart-color-value="#00bcd4"
+                            data-chart-thresholds-value='{"min": 6.8, "max": 7.5}'
                             data-chart-data-value='{{ tank_datas|map(d => {date: d.createdAt|date("Y-m-d H:i:s"), value: d.ph})|json_encode }}'
                         >
                             <div data-chart-target="container" style="width: 100%; height: 250px;"></div>
